fixed position for education since resume.json isn't uniform in its naming - also fixed minor spacing

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -227,9 +227,7 @@ a.dark-contrast {
 .experience {
   h1, h2, h3, h4, h5 {
     small {
-      &+small {
-        padding-top: 0.15em;
-      }
+      padding-top: 0.20em;
       display: block;
     }
   }
